Optimized code with the IDE suggestions